test_suite/tests/ui/fail/help_attribute/duplicated_command_usage.stderr
error: custom attribute panicked
 --> $DIR/duplicated_command_usage.rs:5:1
  |
5 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: multiple `#[command_usage]` defined
